cursive-bootstrap/tests/ui/E-TYP/E-TYP-2056.cursive
// RUN: compile-fail
// DIAG: E-TYP-2056
// SPEC: 8.15
// DESC: Transition invoked on value not of declared source state

modal Counter {
    state Zero {}
    state NonZero { value: i32 }

    transition Zero -> NonZero increment(~) {
        return Counter@NonZero{ value: 1 }
    }
}

procedure bad_transition(c: Counter@NonZero) -> Counter@NonZero {
    return c ~> increment()  //~ ERROR E-TYP-2056: transition source state mismatch
}

public procedure main(move ctx: Context) -> i32 {
    return 0
}
